cabal-version: 2.2

name:                cardano-crypto-wrapper
version:             1.3.0
synopsis:            Cryptographic primitives used in the Cardano project
description:         Cryptographic primitives used in the Cardano project
license:             Apache-2.0
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md

flag development
    description: Disable `-Werror`
    default: False
    manual: True

common base
  build-depends:      base >= 4.12 && < 4.15

common project-config
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude

  ghc-options:        -Weverything
                      -Wno-all-missed-specialisations
                      -Wno-missing-deriving-strategies
                      -Wno-missing-import-lists
                      -Wno-missing-safe-haskell-mode
                      -Wno-prepositive-qualified-module
                      -Wno-safe
                      -Wno-unsafe
                      -Wunused-packages

  if (!flag(development))
    ghc-options:      -Werror

library
  import:             base, project-config

  hs-source-dirs:      src
  exposed-modules:
                       Cardano.Crypto

                       Cardano.Crypto.Hashing
                       Cardano.Crypto.Orphans
                       Cardano.Crypto.ProtocolMagic
                       Cardano.Crypto.Random
                       Cardano.Crypto.Signing
                       Cardano.Crypto.Signing.Redeem
                       Cardano.Crypto.Signing.Safe

  other-modules:
                       Cardano.Crypto.Signing.Tag

                       Cardano.Crypto.Signing.KeyGen
                       Cardano.Crypto.Signing.VerificationKey
                       Cardano.Crypto.Signing.SigningKey
                       Cardano.Crypto.Signing.Signature

                       Cardano.Crypto.Signing.Redeem.Compact
                       Cardano.Crypto.Signing.Redeem.KeyGen
                       Cardano.Crypto.Signing.Redeem.SigningKey
                       Cardano.Crypto.Signing.Redeem.Signature
                       Cardano.Crypto.Signing.Redeem.VerificationKey

                       Cardano.Crypto.Signing.Safe.KeyGen
                       Cardano.Crypto.Signing.Safe.PassPhrase
                       Cardano.Crypto.Signing.Safe.SafeSigner

  build-depends:       aeson
                     , base16-bytestring >= 1
                     , base64-bytestring
                     , base64-bytestring-type
                     , binary
                     , bytestring
                     , canonical-json
                     , cardano-binary
                     , cardano-crypto
                     , cardano-prelude
                     , cryptonite
                     , data-default
                     , formatting
                     , memory
                     , mtl
                     , nothunks
                     , text

test-suite test
  import:             base, project-config

  hs-source-dirs:      test
  main-is:             test.hs
  type:                exitcode-stdio-1.0

  other-modules:
                       Test.Cardano.Crypto.CBOR
                       Test.Cardano.Crypto.Dummy
                       Test.Cardano.Crypto.Example
                       Test.Cardano.Crypto.Gen
                       Test.Cardano.Crypto.Hashing
                       Test.Cardano.Crypto.Json
                       Test.Cardano.Crypto.Keys
                       Test.Cardano.Crypto.Limits
                       Test.Cardano.Crypto.Orphans
                       Test.Cardano.Crypto.Random
                       Test.Cardano.Crypto.Signing.Redeem
                       Test.Cardano.Crypto.Signing.Redeem.Compact
                       Test.Cardano.Crypto.Signing.Safe
                       Test.Cardano.Crypto.Signing.Signing

  build-depends:       bytestring
                     , cardano-binary
                     , cardano-binary-test
                     , cardano-crypto
                     , cardano-crypto-wrapper
                     , cardano-prelude
                     , cardano-prelude-test
                     , cryptonite
                     , formatting
                     , hedgehog >= 1.0.4
                     , memory
                     , text

  ghc-options:         -threaded
                       -rtsopts
