cabal-version: 2.2

name:                cardano-crypto-wrapper
version:             1.3.0
synopsis:            Cryptographic primitives used in the Cardano project
description:         Cryptographic primitives used in the Cardano project
license:             Apache-2.0
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md

flag development
    description: Disable `-Werror`
    default: False
    manual: True

common base
  build-depends:      base >= 4.12 && < 4.15

common project-config
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude

  ghc-options:        -Weverything
                      -Wno-all-missed-specialisations
                      -Wno-missing-import-lists
                      -Wno-safe
                      -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:      -Wno-missing-deriving-strategies

  if impl(ghc >= 8.10)
    ghc-options:      -Wno-missing-safe-haskell-mode
                      -Wno-prepositive-qualified-module
                      -Wunused-packages

  if (!flag(development))
    ghc-options:      -Werror

library
  import:             base, project-config

  hs-source-dirs:      src
  exposed-modules:
                       Cardano.Crypto

                       Cardano.Crypto.Hashing
                       Cardano.Crypto.Orphans
                       Cardano.Crypto.ProtocolMagic
                       Cardano.Crypto.Random
                       Cardano.Crypto.Signing
                       Cardano.Crypto.Signing.Redeem
                       Cardano.Crypto.Signing.Safe

  other-modules:
                       Cardano.Crypto.Signing.Tag

                       Cardano.Crypto.Signing.KeyGen
                       Cardano.Crypto.Signing.VerificationKey
                       Cardano.Crypto.Signing.SigningKey
                       Cardano.Crypto.Signing.Signature

                       Cardano.Crypto.Signing.Redeem.Compact
                       Cardano.Crypto.Signing.Redeem.KeyGen
                       Cardano.Crypto.Signing.Redeem.SigningKey
                       Cardano.Crypto.Signing.Redeem.Signature
                       Cardano.Crypto.Signing.Redeem.VerificationKey

                       Cardano.Crypto.Signing.Safe.KeyGen
                       Cardano.Crypto.Signing.Safe.PassPhrase
                       Cardano.Crypto.Signing.Safe.SafeSigner

  build-depends:       aeson
                     , base16-bytestring >= 1
                     , base64-bytestring
                     , base64-bytestring-type
                     , binary
                     , bytestring
                     , canonical-json
                     , cardano-binary
                     , cardano-crypto
                     , cardano-prelude
                     , cryptonite
                     , data-default
                     , formatting
                     , memory
                     , mtl
                     , nothunks
                     , text
