name:                cardano-ledger-test
version:             1.3.0
synopsis:            Test helpers from cardano-ledger exposed to other packages
description:         Test helpers from cardano-ledger exposed to other packages
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2018 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  exposed-modules:
                       Test.Cardano.Chain.Block.CBOR
                       Test.Cardano.Chain.Block.Gen
                       Test.Cardano.Chain.Common.Address
                       Test.Cardano.Chain.Common.CBOR
                       Test.Cardano.Chain.Common.Compact
                       Test.Cardano.Chain.Common.Example
                       Test.Cardano.Chain.Common.Gen
                       Test.Cardano.Chain.Common.Json
                       Test.Cardano.Chain.Common.Lovelace
                       Test.Cardano.Chain.Delegation.Example
                       Test.Cardano.Chain.Delegation.Gen
                       Test.Cardano.Chain.Genesis.Dummy
                       Test.Cardano.Chain.Genesis.Example
                       Test.Cardano.Chain.Genesis.Gen
                       Test.Cardano.Chain.Genesis.Json
                       Test.Cardano.Chain.Slotting.CBOR
                       Test.Cardano.Chain.Slotting.Example
                       Test.Cardano.Chain.Slotting.Gen
                       Test.Cardano.Chain.Slotting.Json
                       Test.Cardano.Chain.Slotting.Properties
                       Test.Cardano.Chain.UTxO.CBOR
                       Test.Cardano.Chain.UTxO.Compact
                       Test.Cardano.Chain.UTxO.Example
                       Test.Cardano.Chain.UTxO.Gen
                       Test.Cardano.Chain.UTxO.Json
                       Test.Cardano.Chain.Update.Example
                       Test.Cardano.Chain.Update.Gen
                       Test.Cardano.Chain.Update.Properties
                       Test.Cardano.Mirror

                       Test.Options

  build-depends:       base
                     , base16-bytestring
                     , bytestring
                     , cardano-binary
                     , cardano-binary-test
                     , cardano-ledger
                     , cardano-crypto
                     , cardano-crypto-test
                     , cardano-crypto-wrapper
                     , cardano-prelude
                     , cardano-prelude-test
                     , containers
                     , cryptonite
                     , directory
                     , filepath
                     , formatting
                     , hedgehog
                     , mtl
                     , optparse-applicative
                     , tasty
                     , tasty-hedgehog
                     , text
                     , time
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  if (!flag(development))
    ghc-options:         -Werror
