name:                cardano-crypto-test
version:             1.3.0
synopsis:            Test helpers from cardano-crypto exposed to other packages
description:         Test helpers from cardano-crypto exposed to other packages
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2018 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  exposed-modules:
                       Test.Cardano.Crypto.Arbitrary
                       Test.Cardano.Crypto.Bi
                       Test.Cardano.Crypto.Dummy
                       Test.Cardano.Crypto.Example
                       Test.Cardano.Crypto.Gen
                       Test.Cardano.Crypto.Json

  other-modules:
                       Test.Cardano.Crypto.Arbitrary.Unsafe

  build-depends:       base
                     , bytestring
                     , cardano-binary
                     , cardano-binary-test
                     , cardano-crypto
                     , cardano-crypto-wrapper
                     , cardano-prelude
                     , cardano-prelude-test
                     , cryptonite
                     , generic-arbitrary
                     , hedgehog
                     , memory
                     , QuickCheck
                     , quickcheck-instances

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  if (!flag(development))
    ghc-options:         -Werror
