cabal-version: 3.0
name: cardano-ledger-dijkstra
version: 0.1.0.0
license: Apache-2.0
maintainer: operations@iohk.io
author: IOHK
bug-reports: https://github.com/intersectmbo/cardano-ledger/issues
synopsis: Cardano ledger with nested transactions
description:
  This package builds upon the Conway ledger with a nested transactions system.

category: Network
build-type: Simple
extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/intersectmbo/cardano-ledger
  subdir: eras/dijkstra

flag asserts
  description: Enable assertions
  default: False

library
  exposed-modules:
    Cardano.Ledger.Dijkstra
    Cardano.Ledger.Dijkstra.Core
    Cardano.Ledger.Dijkstra.Era
    Cardano.Ledger.Dijkstra.Genesis
    Cardano.Ledger.Dijkstra.Governance
    Cardano.Ledger.Dijkstra.PParams
    Cardano.Ledger.Dijkstra.Rules
    Cardano.Ledger.Dijkstra.Scripts
    Cardano.Ledger.Dijkstra.State
    Cardano.Ledger.Dijkstra.Transition
    Cardano.Ledger.Dijkstra.Translation
    Cardano.Ledger.Dijkstra.Tx
    Cardano.Ledger.Dijkstra.TxAuxData
    Cardano.Ledger.Dijkstra.TxBody
    Cardano.Ledger.Dijkstra.TxCert
    Cardano.Ledger.Dijkstra.TxInfo
    Cardano.Ledger.Dijkstra.TxOut
    Cardano.Ledger.Dijkstra.TxWits
    Cardano.Ledger.Dijkstra.UTxO

  other-modules:
    Cardano.Ledger.Dijkstra.Rules.Bbody
    Cardano.Ledger.Dijkstra.Rules.Cert
    Cardano.Ledger.Dijkstra.Rules.Certs
    Cardano.Ledger.Dijkstra.Rules.Deleg
    Cardano.Ledger.Dijkstra.Rules.Gov
    Cardano.Ledger.Dijkstra.Rules.GovCert
    Cardano.Ledger.Dijkstra.Rules.Ledger
    Cardano.Ledger.Dijkstra.Rules.Ledgers
    Cardano.Ledger.Dijkstra.Rules.Pool
    Cardano.Ledger.Dijkstra.Rules.Utxo
    Cardano.Ledger.Dijkstra.Rules.Utxos
    Cardano.Ledger.Dijkstra.Rules.Utxow
    Cardano.Ledger.Dijkstra.State.Account
    Cardano.Ledger.Dijkstra.State.CertState
    Cardano.Ledger.Dijkstra.State.Stake

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  build-depends:
    aeson,
    base >=4.14 && <5,
    cardano-data,
    cardano-ledger-allegra,
    cardano-ledger-alonzo,
    cardano-ledger-babbage,
    cardano-ledger-binary,
    cardano-ledger-conway,
    cardano-ledger-core:{cardano-ledger-core, internal},
    cardano-ledger-mary,
    cardano-ledger-shelley,
    cardano-strict-containers,
    containers,
    data-default,
    deepseq,
    mempack,
    microlens,
    nothunks,
    plutus-ledger-api,

  if flag(asserts)
    ghc-options: -fno-ignore-asserts

library testlib
  exposed-modules:
  visibility: public
  hs-source-dirs: testlib
  exposed-modules:
    Test.Cardano.Ledger.Dijkstra.Arbitrary
    Test.Cardano.Ledger.Dijkstra.Binary.Annotator
    Test.Cardano.Ledger.Dijkstra.Binary.RoundTrip
    Test.Cardano.Ledger.Dijkstra.Era
    Test.Cardano.Ledger.Dijkstra.ImpTest
    Test.Cardano.Ledger.Dijkstra.TreeDiff

  other-modules: Paths_cardano_ledger_dijkstra
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  build-depends:
    base,
    cardano-ledger-binary,
    cardano-ledger-conway:{cardano-ledger-conway, testlib},
    cardano-ledger-core:{cardano-ledger-core, testlib},
    cardano-ledger-dijkstra,
    cardano-ledger-shelley,
    microlens,

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Paths_cardano_ledger_dijkstra

  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -Wunused-packages
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base,
    cardano-ledger-conway:testlib,
    cardano-ledger-core:testlib,
    cardano-ledger-dijkstra:{cardano-ledger-dijkstra, testlib},
    cardano-ledger-shelley:testlib,
