cabal-version:       2.2
name:                cardano-ledger-example-shelley-test
version:             0.1.0.0
synopsis:            Shelley ledger example test suite
description:
bug-reports:         https://github.com/input-output-hk/cardano-ledger-specs/issues
license:             Apache-2.0
author:              IOHK Formal Methods Team, Obsidian Systems LLC
maintainer:          formal.methods@iohk.io
copyright:           2020 Input Output (Hong Kong) Ltd.
category:            Network
build-type:          Simple


source-repository head
  type:     git
  location: https://github.com/input-output-hk/cardano-ledger-specs

library
  exposed-modules:
    Test.Cardano.Ledger.Example
  -- other-extensions:
  build-depends:
    array,
    cardano-ledger-example-shelley,
    shelley-spec-ledger-test,
    base >=4.9 && <4.15,
    bytestring,
    cardano-binary,
    cardano-crypto-class,
    cardano-crypto-praos,
    cardano-prelude,
    generic-random,
    cardano-slotting,
    cborg,
    containers,
    hashable,
    mtl,
    shelley-spec-ledger,
    small-steps,
    tasty-hunit,
    tasty-quickcheck,
    tasty,
    text,
    QuickCheck >= 2.13.2,
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
  default-language:    Haskell2010


test-suite cardano-ledger-example-shelley-tests
    type:                exitcode-stdio-1.0
    main-is:             Tests.hs
    hs-source-dirs:      test
    other-modules:
    default-language:    Haskell2010
    ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -Wall
      -Werror
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -- We set a bound here so that we're alerted of potential space
      -- leaks in our generators (or test) code.
      --
      -- The 4 megabytes stack bound and 200 megabytes heap bound were
      -- determined ad-hoc.
      "-with-rtsopts=-K4m -M250m"
    build-depends:
      data-default-class,
      cardano-ledger-example-shelley,
      cardano-ledger-example-shelley-test,
      base >=4.9 && <4.15,
      bytestring,
      cardano-binary,
      cardano-prelude,
      cardano-slotting,
      cborg,
      containers,
      mtl,
      shelley-spec-ledger,
      shelley-spec-ledger-test,
      small-steps-test,
      small-steps,
      tasty-hunit,
      tasty-quickcheck,
      tasty,
      QuickCheck,
