cabal-version:       2.2

name:                cardano-ledger-example-shelley
version:             0.1.0.0
synopsis:            Example era within Shelley context
description:
  This is intended as a demonstration and example for hard fork
  combinators.
bug-reports:         https://github.com/input-output-hk/cardano-ledger-specs/issues
license:             Apache-2.0
author:              IOHK Formal Methods Team
maintainer:          formal.methods@iohk.io
copyright:           2020 Input Output (Hong Kong) Ltd.
category:            Network
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/cardano-ledger-specs

library
  exposed-modules:
    Cardano.Ledger.Example

  -- other-extensions:
  build-depends:
    array,
    base >=4.9 && <4.15,
    bytestring,
    cardano-binary,
    cardano-crypto-class,
    cardano-prelude,
    cardano-slotting,
    cborg,
    containers,
    deepseq,
    groups,
    mtl,
    nothunks,
    prettyprinter,
    primitive,
    shelley-spec-ledger,
    small-steps,
    text,
    transformers
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
  default-language:    Haskell2010
